# web_project_microshop

./: db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/versions/: 2025_08_01_0210-1c576429e756_create_products_table.py  2025_08_01_0230-77ab99df0ef8_create_products_table.py  2025_08_01_0240-e5bdf669d229_create_posts_table.py  2025_08_05_1050-778c34dd366d_create_profile_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
